samples/_failures_safe/1761199199_f6db33_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ac925fde.c: In function ‘print_token’:
./samples/SAFE/__tmp_ac925fde.c:166:9: error: expected expression at end of input
  166 |         case
      |         ^~~~
./samples/SAFE/__tmp_ac925fde.c:166:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ac925fde.c:166:9: error: expected declaration or statement at end of input
